--- a/src/main/resources/templates/sbu/jsf/new-only-bs3.html
+++ b/src/main/resources/templates/sbu/jsf/new-only-bs3.html
@@ -5,7 +5,7 @@
 
     <div class="card-body">
       <react-form th:id="${'newForm' + rid}"
-        th:action="@{${item.createPath}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${backTargetId}, __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__=${backPath})}"
+        th:action="@{${item.createPath}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${ajaxTargetId})} + ${fowardingParam}"
         method="POST" ajax:target="${ajaxTargetId}" theme="bs3">
         <button class="btn btn-primary" type="submit">[[${#messages.msgOrNull('sbu.ui.submit') ?:
           'Submit'}]]</button>
