--- a/src/main/resources/templates/sbu/jsf/block.html
+++ b/src/main/resources/templates/sbu/jsf/block.html
@@ -2,17 +2,18 @@
 
 <th:block th:fragment="scope(yield)" th:with="
   rid=${(T(java.lang.Math).random() * 2147483647).intValue()},
-  attachmentDialog=${attachmentDialog} ?: false,
-  _historyBack=${_historyBack} ?: false,
-  jsfTheme=${jsfTheme},
+  attachmentDialog=${attachmentDialog ?: _attachmentDialog ?: false},
+  historyBack=${historyBack ?: _historyBack ?: false},
+  jsfTheme=${jsfTheme ?: _jsfTheme},
   saveonly=${saveonly},
   saveonlybtntxt=${saveonlybtntxt},
   item=${__${@webModelAttributes.ITEM_NAME}__},
   queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__},
   ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE},
   backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId},
-  backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}
-  ">
+  backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__},
+  fowardingParam=${@sbuHtml.fowardParam(param, #vars)}
+">
 
   <th:block th:replace="${yield}"></th:block>
 
