--- a/src/main/resources/templates/sbu/jsf/workbook-template.html
+++ b/src/main/resources/templates/sbu/jsf/workbook-template.html
@@ -1,7 +1,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5"
-  th:with="enableUpload=${enableUpload} ?: true, enableBackup=${enableBackup} ?: false, templateName=${templateName} ?: 'common',templateDisplay=${templateDisplay} ?: ${templateName}, templateValueMap=${templateValueMap}, route=${__${@webModelAttributes.ROUTE_NAME}__}">
+<div th:fragment="bs5" th:with="
+  enableUpload=${enableUpload} ?: true,
+  enableBackup=${enableBackup} ?: false,
+  templateName=${templateName} ?: 'common',
+  templateDisplay=${templateDisplay} ?: ${templateName},
+  templateValueMap=${templateValueMap},
+  route=${__${@webModelAttributes.ROUTE_NAME}__}
+">
 
   <div th:if="${enableUpload}" class="btn-group btn-group-sm float-end" role="group"
     aria-label="Basic radio toggle button group">
