--- a/src/main/resources/templates/sbu/fsm/state-form-editor.html
+++ b/src/main/resources/templates/sbu/fsm/state-form-editor.html
@@ -19,9 +19,8 @@
       <li th:replace="${navTab}"></li>
     </th:block>
 
-    <li
-      th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item.phase.stateMachine)}"
-      class="nav-item" role="presentation">
+    <li th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item)}" class="nav-item"
+      role="presentation">
       <button class="nav-link" data-bs-toggle="tab"
         th:attr="data-bs-target=${'#viewableForm' + fid + '_' + iter.index}" type="button"
         role="tab">
@@ -51,8 +50,7 @@
       <div th:replace="${tabContent}"></div>
     </th:block>
 
-    <div
-      th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item.phase.stateMachine)}"
+    <div th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item)}"
       class="tab-pane fade" th:id="${'viewableForm' + fid + '_' + iter.index}" role="tabpanel">
       <div th:id="${'embedded' + fid + '_' + iter.index}" class="pt-2">
         <a hx:target="${'#embedded' + fid + '_' + iter.index}" hx-ext="json-enc" hx-trigger="load"
