--- a/src/main/resources/templates/sbu/fsm/content-editor.html
+++ b/src/main/resources/templates/sbu/fsm/content-editor.html
@@ -24,8 +24,7 @@
       </button>
     </li>
 
-    <li th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item)}" class="nav-item"
-      role="presentation">
+    <li th:each="formType,iter : ${item.viewableForms}" class="nav-item" role="presentation">
       <button class="nav-link" data-bs-toggle="tab"
         th:attr="data-bs-target=${'#viewableForm' + fid + '_' + iter.index}" type="button"
         role="tab">
@@ -36,9 +35,7 @@
       </button>
     </li>
 
-    <li
-      th:each="formType,iter : ${item.phase.stateRecord.getEntireViewableForms(item.phase.stateMachine)}"
-      class="nav-item" role="presentation">
+    <li th:each="formType,iter : ${item.entireViewableForms}" class="nav-item" role="presentation">
       <button class="nav-link" data-bs-toggle="tab"
         th:attr="data-bs-target=${'#entireStateForms' + fid + '_' + iter.index}" type="button"
         role="tab">
@@ -62,8 +59,8 @@
       </div>
     </div>
 
-    <div th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item)}"
-      class="tab-pane fade" th:id="${'viewableForm' + fid + '_' + iter.index}" role="tabpanel">
+    <div th:each="formType,iter : ${item.viewableForms}" class="tab-pane fade"
+      th:id="${'viewableForm' + fid + '_' + iter.index}" role="tabpanel">
       <div th:id="${'embedded' + fid + '_' + iter.index}" class="pt-2">
         <a hx:target="${'#embedded' + fid + '_' + iter.index}" hx-ext="json-enc" hx-trigger="load"
           hx:get="@{${item.joinPath('forms', formType)}(
@@ -75,17 +72,17 @@
       </div>
     </div>
 
-    <div
-      th:each="formTypeData,iter : ${item.phase.stateRecord.getEntireViewableForms(item.phase.stateMachine)}"
-      class="tab-pane fade" th:id="${'entireStateForms' + fid + '_' + iter.index}" role="tabpanel">
-      <ul class="list-group pt-2"
-        th:with="formDataTable=${item.phase.stateRecord.getEntireViewableForms(item.phase.stateMachine)}">
+    <div th:each="formTypeData,iter : ${item.entireViewableForms}" class="tab-pane fade"
+      th:id="${'entireStateForms' + fid + '_' + iter.index}" role="tabpanel">
+      <ul class="list-group pt-2" th:with="formDataTable=${item.entireViewableForms}">
         <th:block th:each="formBranchData : ${formTypeData.value}">
           <a class="list-group-item" data-bs-toggle="modal" data-bs-target="#stateFormModal"
             hx-target="#modelForm"
             hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}}"
             hx-ext="json-enc">
-            [[${formBranchData.key}]]
+            [[${entireStateFormTitleReplacer != null ?
+            entireStateFormTitleReplacer.getTitle(formTypeData.key, formBranchData.key) :
+            formBranchData.key}]]
           </a>
         </th:block>
       </ul>
