Fix fsm tamplates

--- a/src/main/resources/templates/sbu/fsm/action-bar.html
+++ b/src/main/resources/templates/sbu/fsm/action-bar.html
@@ -19,7 +19,7 @@
       </button>
       <button type="button" class="btn btn-outline-primary">
         <i class="fas fa-route fa-fw"></i>
-        [[${item.phase.stateMachine.state.displayName}]]
+        [[${item.phase.currentState.displayName}]]
       </button>
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-outline-success">
