--- a/src/main/resources/templates/sbu/fsm/state-badge.html
+++ b/src/main/resources/templates/sbu/fsm/state-badge.html
@@ -4,7 +4,7 @@
   class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
   <button type="button" class="btn btn-outline-primary">
     <i class="fas fa-diagram-project"></i>
-    [[${item.phase.stateMachine.state.displayName}]]
+    [[${item.phase.currentState.displayName}]]
   </button>
 </div>
 
