--- a/src/main/resources/static/react-form/css/bootswatch-4.6.2-litera.css
+++ b/src/main/resources/static/react-form/css/bootswatch-4.6.2-litera.css
@@ -11769,3 +11769,12 @@ table-danger,
 .list-group {
   font-size: 0.930125rem;
 }
+
+.array-item-add svg {
+  width: 1.5em !important;
+  height: 1.5em !important;
+}
+
+.array-item-add {
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15) !important;
+}
