--- a/src/main/resources/static/react-form/css/bootswatch-4.6.2-litera.css
+++ b/src/main/resources/static/react-form/css/bootswatch-4.6.2-litera.css
@@ -11778,3 +11778,7 @@ table-danger,
 .array-item-add {
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15) !important;
 }
+
+.field-array>.form-group>div h5 {
+  font-size: 1.0rem;
+}
