--- a/src/main/resources/templates/sbu/fsm/content-editor.html
+++ b/src/main/resources/templates/sbu/fsm/content-editor.html
@@ -50,7 +50,8 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane fade show active" th:id="${'mainForm' + fid}" role="tabpanel">
-      <div th:if="user == null || user.canRead(item)" th:replace="~{sbu/jsf/show-edit-only :: bs5(
+      <th:block th:if="${user == null || user.canRead(item)}">
+        <div th:replace="~{sbu/jsf/show-edit-only :: bs5(
           _attachmentDialog=true,
           _historyBack=true,
           saveonly=${saveonly},
@@ -58,7 +59,8 @@
           __${@webModelAttributes.ITEM_NAME}__=${item},
           ajaxTargetId=${ajaxTargetId}
         )}">
-      </div>
+        </div>
+      </th:block>
     </div>
 
     <div th:each="formType,iter : ${item.viewableForms}" class="tab-pane fade"
